--- a/Proxmox/tasks/env.yml
+++ b/Proxmox/tasks/env.yml
@@ -1,8 +1,6 @@
 ---
 - vars:
-      doppler_info:
-          project: jarvis
-          config: prd
+      project: jarvis
       doppler_required_secrets:
           - JARVIS_ADMIN_EMAIL
           - JARVIS_ADMIN_NAME
@@ -14,6 +12,8 @@
           - JARVIS_AUTH_GOOGLE_CLIENT_SECRET
           - JARVIS_AUTH_X_CLIENT_ID
           - JARVIS_AUTH_X_CLIENT_SECRET
+          - JARVIS_VOIDAUTH_STORAGE_KEY
+          - JARVIS_BOT_EMAIL
           - JARVIS_CF_DNS_API_TOKEN
           - JARVIS_CF_TUNNEL_TOKEN
           - JARVIS_CF_R2_ENDPOINT
@@ -21,10 +21,10 @@
           - JARVIS_DOMAIN
           - JARVIS_GITHUB_TOKEN_SSH
           - JARVIS_POSTGRES_PASSWORD
-          - JARVIS_AUTH_STORAGE_KEY
       local_config:
-          JARVIS_DIR: '/root/.jarvis'
-          JARVIS_CONFIGS_DIR: '/root/.jarvis/configs'
+          JARVIS_BOT_NAME: '{{ project | title }}'
+          JARVIS_DIR: '/root/.{{ project }}'
+          JARVIS_CONFIGS_DIR: '/root/.{{ project }}/configs'
           JARVIS_ADMIN_USERNAME: 'root'
           JARVIS_NETWORK_PREFIX: '192.168.68'
           JARVIS_GATEWAY: '{{ local_config.JARVIS_NETWORK_PREFIX }}.1'
@@ -32,14 +32,14 @@
           JARVIS_TZ: 'Asia/Kolkata'
           JARVIS_CERT_RESOLVER: 'letsencrypt'
           JARVIS_COMMUNITY_SCRIPTS_URL: 'https://raw.githubusercontent.com/community-scripts/ProxmoxVE/main'
-          JARVIS_ICON_CDN: 'https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/'
+          JARVIS_ICON_CDN: 'https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/svg/'
           JARVIS_SERVICES:
-              auth:
+              voidauth:
                   id: 253
                   name: Auth
-                  subtitle: SSO Authentication
-                  logo: voidauth.png
-                  port: 3030
+                  subtitle: Authentication
+                  logo: fusionauth.svg
+                  port: 3000
                   subdomains: [auth]
                   skip_auth: true
 
@@ -47,7 +47,7 @@
                   id: 253
                   name: PostgreSQL
                   subtitle: Database Server
-                  logo: postgres.png
+                  logo: postgres.svg
                   port: 5432
                   hidden: true
 
@@ -55,7 +55,7 @@
                   id: 253
                   name: Homer
                   subtitle: Dashboard
-                  logo: homer.png
+                  logo: homer.svg
                   port: 8010
                   root_domain: true
                   skip_auth: true
@@ -65,7 +65,7 @@
                   id: 248
                   name: Jellyfin
                   subtitle: Media Server
-                  logo: jellyfin.png
+                  logo: jellyfin.svg
                   port: 8096
                   subdomains: [media, jellyfin]
 
@@ -73,7 +73,7 @@
                   id: 249
                   name: qBittorrent
                   subtitle: Torrent Client
-                  logo: qbittorrent.png
+                  logo: qbittorrent.svg
                   port: 80
                   subdomains: [torrent]
 
@@ -81,7 +81,7 @@
                   id: 250
                   name: Home Assistant
                   subtitle: Smart Home Automation
-                  logo: home-assistant.png
+                  logo: home-assistant.svg
                   port: 8123
                   subdomains: [home]
 
@@ -89,7 +89,7 @@
                   id: 252
                   name: Pihole
                   subtitle: Network DNS & Ad Blocker
-                  logo: pi-hole.png
+                  logo: pi-hole.svg
                   port: 80
                   path: /admin
                   subdomains: [dns]
@@ -99,7 +99,7 @@
                   id: 253
                   name: Docker
                   subtitle: Container Platform
-                  logo: docker.png
+                  logo: docker.svg
                   port: 2375
                   hidden: true
 
@@ -107,7 +107,7 @@
                   id: 254
                   name: Traefik
                   subtitle: Reverse Proxy
-                  logo: traefik.png
+                  logo: traefik.svg
                   port: 8080
                   subdomains: [proxy]
                   is_internal: true
@@ -116,7 +116,7 @@
                   id: 253
                   name: Backrest
                   subtitle: Backup Manager
-                  logo: backrest.png
+                  logo: backrest.svg
                   port: 9898
                   subdomains: [backup]
 
@@ -124,7 +124,7 @@
                   id: 253
                   name: VS Code
                   subtitle: Code Server
-                  logo: vscode.png
+                  logo: vscode.svg
                   port: 8888
                   subdomains: [code]
 
@@ -132,7 +132,7 @@
                   id: 200
                   name: Proxmox
                   subtitle: Virtualization Platform
-                  logo: proxmox.png
+                  logo: proxmox.svg
                   port: 8006
                   https: true
                   subdomains: [pm]
@@ -147,7 +147,7 @@
       - name: Retrieve Doppler Secrets
         block:
             - name: Download Secrets
-              command: doppler secrets download --project {{ doppler_info.project }} --config {{ doppler_info.config }} --no-file --format json
+              command: doppler secrets download --project {{ project }} --config prd --no-file --format json
               register: secrets_output
               changed_when: false
               no_log: true
@@ -155,7 +155,7 @@
         rescue:
             - name: Doppler Login Required
               fail:
-                  msg: 'FAILED: `doppler login` required for {{ doppler_info.project }}/{{ doppler_info.config }}'
+                  msg: 'FAILED: `doppler login` required for {{ project }}/prd'
 
       - name: Parse and Verify Secrets
         set_fact:
