--- a/Proxmox/tasks/env.yml
+++ b/Proxmox/tasks/env.yml
@@ -32,13 +32,13 @@
           JARVIS_TZ: 'Asia/Kolkata'
           JARVIS_CERT_RESOLVER: 'letsencrypt'
           JARVIS_COMMUNITY_SCRIPTS_URL: 'https://raw.githubusercontent.com/community-scripts/ProxmoxVE/main'
-          JARVIS_ICON_CDN: 'https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/svg/'
+          JARVIS_ICON_CDN: 'https://cdn.jsdelivr.net/gh/selfhst/icons@main/svg/'
           JARVIS_SERVICES:
               voidauth:
                   id: 253
                   name: Auth
-                  subtitle: Authentication
-                  logo: fusionauth.svg
+                  subtitle: VoidAuth OAuth Provider
+                  logo: ceph.svg
                   port: 3000
                   subdomains: [auth]
                   skip_auth: true
@@ -47,7 +47,7 @@
                   id: 253
                   name: PostgreSQL
                   subtitle: Database Server
-                  logo: postgres.svg
+                  logo: databasus.svg
                   port: 5432
                   hidden: true
 
@@ -63,32 +63,32 @@
 
               jellyfin:
                   id: 248
-                  name: Jellyfin
-                  subtitle: Media Server
-                  logo: jellyfin.svg
+                  name: Movies
+                  subtitle: Jellyfin Media Server
+                  logo: streamyfin.svg
                   port: 8096
                   subdomains: [media, jellyfin]
 
               qbittorrent:
                   id: 249
-                  name: qBittorrent
-                  subtitle: Torrent Client
-                  logo: qbittorrent.svg
+                  name: Torrent
+                  subtitle: qBitTorrent Downloader
+                  logo: utorrent.svg
                   port: 80
                   subdomains: [torrent]
 
               home:
                   id: 250
-                  name: Home Assistant
-                  subtitle: Smart Home Automation
-                  logo: home-assistant.svg
+                  name: Smart Home
+                  subtitle: Home Assistant Dashboard
+                  logo: home-assistant-matter-hub.svg
                   port: 8123
                   subdomains: [home]
 
               pihole:
                   id: 252
                   name: Pihole
-                  subtitle: Network DNS & Ad Blocker
+                  subtitle: DNS & Ad Blocker
                   logo: pi-hole.svg
                   port: 80
                   path: /admin
@@ -105,33 +105,33 @@
 
               traefik:
                   id: 254
-                  name: Traefik
-                  subtitle: Reverse Proxy
-                  logo: traefik.svg
+                  name: Proxy
+                  subtitle: Traefik Reverse Proxy
+                  logo: at-t.svg
                   port: 8080
                   subdomains: [proxy]
                   is_internal: true
 
               backrest:
                   id: 253
-                  name: Backrest
-                  subtitle: Backup Manager
-                  logo: backrest.svg
+                  name: Backup
+                  subtitle: Backrest Backup Manager
+                  logo: tpdb.svg
                   port: 9898
                   subdomains: [backup]
 
               code:
                   id: 253
-                  name: VS Code
-                  subtitle: Code Server
-                  logo: vscode.svg
+                  name: Code
+                  subtitle: VS Code Server
+                  logo: visual-studio-code.svg
                   port: 8888
                   subdomains: [code]
 
               proxmox:
                   id: 200
-                  name: Proxmox
-                  subtitle: Virtualization Platform
+                  name: Jarvis Console
+                  subtitle: Proxmox Dashboard
                   logo: proxmox.svg
                   port: 8006
                   https: true
