--- a/Proxmox/tasks/env.yml
+++ b/Proxmox/tasks/env.yml
@@ -104,13 +104,22 @@
                   hidden: true
 
               traefik:
-                  id: 254
+                  id: 205
                   name: Proxy
                   subtitle: Traefik Reverse Proxy
                   logo: at-t.svg
                   port: 8080
                   subdomains: [proxy]
                   is_internal: true
+
+              authelia:
+                  id: 247
+                  name: Authelia
+                  subtitle: Authentication Server
+                  logo: authelia.svg
+                  port: 9091
+                  subdomains: [auth]
+                  skip_auth: true
 
               backrest:
                   id: 253
@@ -127,6 +136,14 @@
                   logo: visual-studio-code.svg
                   port: 8888
                   subdomains: [code]
+
+              files:
+                  id: 245
+                  name: Files
+                  subtitle: NAS & File Manager
+                  logo: filebrowser-quantum.svg
+                  port: 80
+                  subdomains: [files]
 
               proxmox:
                   id: 200
